--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/benjaminek1337/DT162G-Lazy-Guitarist#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.6",
+    "spotify-web-api-node": "^5.0.0"
   }
 }
