--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/benjaminek1337/DT162G-Lazy-Guitarist#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "spotify-web-api-node": "^5.0.0"
