--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "googleapis": "^66.0.0",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
     "spotify-web-api-node": "^5.0.0"
